# Vault

./: .dockerignore  .env.example  .eslintrc.cjs  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.txt  Cargo.toml  Dockerfile  FINDINGS.md  LINTING.md  PROBLEM.md  PROGRESS.md  README.md  RUST_REWRITE.md  docker-compose.dev.yml  docker-compose.yml  eslint.config.cjs  package-lock.json  package.json  prettier.config.cjs  pyproject.toml  requirements-dev.txt  requirements.txt  stylelint.config.cjs
app/: __init__.py  assets.py  auth.py  config.py  db.py  main.py  models.py  preferences.py  routers.py  site_settings.py  storage.py  version.py
docs/: LINTING.md  PROBLEM.md  RUST_REWRITE.md
extras/: bench_transfers.py  check-rust-test-layout.sh
scripts/: bench_transfers.py  build-assets.mjs  check-css-tokens.mjs  check-rust-test-layout.sh  check_rust_test_layout.py  react-globals.mjs
tests/: support.py  test_acl_permissions.py  test_admin_settings.py  test_appearance_overrides.py  test_archive_folder_placeholders.py  test_auth.py  test_db_init.py  (+19 more)
vault/server/: Cargo.toml
vault/server/src/: auth.rs  config.rs  documents.rs  exports.rs  http.rs  main.rs  preferences.rs  storage.rs  transfers.rs  uploads.rs  views.rs
vault/server/src/db/: mod.rs
vault/server/tests/: auth.rs  config.rs  db_bootstrap.rs  health.rs  reconciliation.rs  retention.rs  routes_admin.rs  routes_admin_debug.rs  routes_app_shell.rs  routes_bootstrap.rs  routes_documents.rs  routes_downloads.rs  routes_events.rs  routes_exports.rs  routes_folders.rs  routes_name_validation.rs  routes_oidc.rs  routes_preferences.rs  routes_security.rs  routes_settings.rs  routes_shares.rs  routes_uploads.rs  storage.rs  storage_s3.rs  transfers.rs
(+152 files in other folders)
