[workspace]
members = ["crates/vault-server"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "UNLICENSED"
rust-version = "1.95"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
